create fake services FakeAnnouncement.service and FakeQuizzes.service and integrate with Dashboard component

--- a/src/app/content/styles/dashboard.css
+++ b/src/app/content/styles/dashboard.css
@@ -39,10 +39,13 @@
     margin-top: 0!important;
 }
 
-.task-container {
+.assignment-container {
     margin: 20px 5px;
 }
 
+.assignment-container button {
+    text-transform: capitalize!important;
+}
 
 .assignment-container:not(:last-child) {
     padding-bottom: 20px;
